--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:lightskyblue;">
 
-<h1>Welcome to veeraj ECS CI CD Demo - V1</h1>
+<h1>Welcome to veeraj's ECS CI CD Demo - V1</h1>
 <p>Continuous Integration & Continuous Deployment with circle ci</p>
 
 </body>
